# UniversityPractices

./: Header.h  NoneEff.h  README.md  W_NoneEff.nb  W_QuickHull.nb  lib.h  main.cpp  own.cpp  pr.sln  quickHull.h  test.cpp
Hull (3 sem)/: README.md  W_NoneEff.nb  W_QuickHull.nb
Hull (3 sem)/doc/: task_Пиневич В.Г..docx
Hull (3 sem)/points randomizator/: Source4.cpp
Hull (3 sem)/points randomizator/ConsoleApplication1/: ConsoleApplication1.sln
Hull (3 sem)/points randomizator/ConsoleApplication1/ConsoleApplication1/: ConsoleApplication1.vcxproj  Source1.cpp  Source2.cpp  Source3.cpp
Hull (3 sem)/project with chrono/: Rand.txt  problem3.txt
Hull (3 sem)/project with chrono/test/test/: Header.h  problem1.txt  test.vcxproj
Travelling salesman problem/c++/: CMakeLists.txt  input.txt  out_Quick.txt  recursion.cpp  shared.cpp  shared.h  simAnnealing.cpp  st.bash  test11.txt  test15.txt  test29.txt  test5.txt  tsp.cpp
Travelling salesman problem/wolfram/: Bav29.txt  None_Eff.nb  out_NonEff.txt  plot.nb
doc/: Отчет. Пиневич.doc  Пиневич.pptx
points randomizator/ConsoleApplication1/ConsoleApplication1/: ConsoleApplication1.cpp  ConsoleApplication1.vcxproj.filters  Source.cpp  cor.txt
pr/: NoneEff.h  lib.h  main.cpp  out_NonEff.txt  out_Quick.txt  pr.vcxproj  pr.vcxproj.filters  quickHull.h  sample.txt
pr/pr/: lib.h  pr.vcxproj  pr.vcxproj.filters
pr/x64/Debug/: pr.exe.recipe  pr.ilk  vc142.idb
project with chrono/test/: test.sln
project with chrono/test/test/: TimeRes.txt  out_NonEff.txt  out_Quick.txt  test.cpp  test.vcxproj.filters
(+56 files in other folders)
